# comdare-db-licensing-server

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  buildsystem.xml  configure.bat  configure.sh
include/comdare/db/licensing/: DbLicensingServer.hpp
